# realtime-pose-correction

./: .gitignore  LICENSE  README.md  app.py  app_run1_detector_only.py  app_run2_pose_only.py  app_run3_features_only.py  app_run4_full_pipeline.py  pyproject.toml
models/: model_metadata.json
scripts/: extract_features.py
src/classifier/: posture_classifier.py
src/detector/: person_detector.py
src/features/: feature_extractor.py
src/feedback/: feedback_engine.py
src/pose/: pose_estimator.py
src/utils/: fps.py  geometry.py  smoothing.py
